--- a/ui/html/pages/home.tmpl.html
+++ b/ui/html/pages/home.tmpl.html
@@ -1,6 +1,7 @@
 {{define "title"}}Home{{end}}
 
 {{define "main"}}
+    <h2>Welcome to the land of Snippy Lippy!</h2>
     <h2>Latest Snippies</h2>
     <p>There's nothing to see here yet!</p>
 {{end}}
